[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ansys-seascape"
version = "0.3.dev0"
description = "A pythonic remotable interface to RedHawkSC and TotemSC"
readme = "README.rst"
requires-python = ">=3.7,<4"
license = {file = "LICENSE"}
authors = [{name = "ANSYS, Inc.", email = "pyansys.support@ansys.com"}]
maintainers = [{name = "Abhishek Kale", email = "abhishek.kale@ansys.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "importlib-metadata>=4.0,<5; python_version<='3.8'",
    "requests>=2.23",
]

[project.optional-dependencies]
tests = [
    "pytest==8.1.1",
    "pytest-cov==4.1.0",
]
doc = [
    "ansys-sphinx-theme==0.14.1",
    "numpydoc==1.6.0",
    "Sphinx==7.2.6",
    "sphinx-copybutton==0.5.2",
]

[project.urls]
Source = "https://github.com/pyansys/pyseascape"
Documentation = "https://seascape.docs.pyansys.com"

[tool.flit.module]
name = "ansys.seascape"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.seascape"]

[tool.coverage.report]
show_missing = true
