[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ansys-seascape"
version = "0.3.dev0"
description = "A pythonic remotable interface to RedHawkSC and TotemSC"
readme = "README.rst"
requires-python = ">=3.10,<4"
license = {file = "LICENSE"}
authors = [{name = "ANSYS, Inc.", email = "pyansys.support@ansys.com"}]
maintainers = [{name = "Abhishek Kale", email = "abhishek.kale@ansys.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "requests>=2.23",
]

[project.optional-dependencies]
tests = [
    "pytest==8.3.5",
    "pytest-cov==6.1.1",
]
doc = [
    "ansys-sphinx-theme==1.3.3",
    "numpydoc==1.8.0",
    "Sphinx==8.1.3",
    "sphinx-copybutton==0.5.2",
]

[project.urls]
Source = "https://github.com/ansys/pyseascape"
Documentation = "https://seascape.docs.pyansys.com"

[tool.flit.module]
name = "ansys.seascape"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.seascape"]

[tool.coverage.report]
show_missing = true
